--- a/src/pages/SafetyPrecautions/style.css
+++ b/src/pages/SafetyPrecautions/style.css
@@ -3,7 +3,7 @@
     justify-content: center;
 }
 
-@media(max-width: 800px) {
+@media(max-width: 826px) {
     .rules {
         display: flex;
         flex-direction: column;
